--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Project-A</title>
+	<script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+
+</head>
+<body>
+ <input class="textField" type="text" name="firstInputFiled">
+	
+</body>
+</html
