--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>Project-A</title>
-	<script src="https://code.jquery.com/jquery-3.3.1.js"></script>
-
+  <meta charset = "UTF-8">
+  <title> My First CRUD App </title>
+  <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
+  <script src = "app.js"></script>
 </head>
 <body>
- <input class="textField" type="text" name="firstInputFiled">
-	
+  <input class="textField" type="text" name= "firstInputField"> 
+  <button type="button" class="submitForm"> Click to save text </button> 
+  <div class="debug"></div>
+
+<script>
+</script>
 </body>
-</html
+</html>
