--- a/index.html
+++ b/index.html
@@ -1,18 +1,21 @@
-
-<!doctype html>
+ines (17 sloc)  518 Bytes
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset = "UTF-8">
-  <title> My First CRUD App </title>
-  <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
-  <script src = "app.js"></script>
+	<meta charset="UTF-8">
+	<title>Project-A</title>
+	<script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="          
+  crossorigin="anonymous"
+></script>
+	<script src="app.js"></script>
+
 </head>
 <body>
-  <input class="textField" type="text" name= "firstInputField"> 
-  <button type="button" class="submitForm"> Click to save text </button> 
-  <div class="debug"></div>
+ <input class="textField" type="text" name="firstInputFiled">
+ <button class="setData">Click to save text</button>
+  <button class="getData">Click to get text</button>
 
-<script>
-</script>
+ <div class="debug"></div>
+	
 </body>
 </html>
