--- a/index.html
+++ b/index.html
@@ -12,20 +12,20 @@
     <label for="save-name">Give your snippet a name</label>
     <input id="save-name" class="textField" type="text" name="saveField">
 
-    <label for="snippetContainer">Write your snippet here please</label>
-    <textarea name="snippetContainer" id="snippetContainer" cols="30" rows="10"></textarea>
+    <label for="snippet-container">Write your snippet here please</label>
+    <textarea name="snippet-container" id="snippet-container" cols="30" rows="10"></textarea>
 
-    <button class="setData">Click to save text</button>
+    <button class="set-data">Click to save text</button>
   </div>
 
   <main class="search-results">
     <div>
       <label for="get-name">name</label>
       <input id="get-name" class="textField" type="text" name="searchField">
-      <button class="getData">Let's get it</button>     
+      <button class="get-data">Let's get it</button>     
     </div>
 
-    <div>
+    <div class="show-snippet">
       
     </div>
   </main>
