forgot to save some changes

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <button class="get-data">Let's get it</button>     
     </div>
 
+    <div class="all-snippets"></div>
     <div class="show-snippet">
       
     </div>
